--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <table >
-            <tr>
-                <td style="text-align: left"><img  width="30%"  src="photo.jpg" alt="MY PHOTO"></td>
-                <td><h1>GARVIT HINDOLIYA</h1>
-                    <P> <i>Web developer $ PYTHON Master</i></P>
-                    <p>I ❤️ web development and Here to guide the Coding Enthusiasts 🚀</p>
-                    <nav>
-                        <ul>
-                            <li><a href="#Education">Education</a></li>
-                            <li><a href="#Intenship">Intenship</a></li>
-                            <li><a href="#Project">Project</a></li>
-                            <li><a href="#contactme">contactme</a></li>
-                        </ul>
-                    </nav>
-                </td>
-            </tr>
-        </table>
+   <header>
+        <div class="container">
+            <img src="photo.jpg" alt="MY photo">
+            <div class="name">
+                <h1>GARVIT HINDOLIYA</h1>
+                <P> <i>Web developer $ PYTHON Master</i></P>
+                <p>I ❤️ web development and Here to guide the Coding Enthusiasts 🚀</p>
+                <nav>
+                    <ul>
+                        <li><a href="#Education">Education</a></li>
+                        <li><a href="#Intenship">Intenship</a></li>
+                        <li><a href="#Project">Project</a></li>
+                        <li><a href="#contactme">contactme</a></li>
+                    </ul>
+                </nav>
+            </div>
+            
+        </div>
     </header>
     <hr>
     <!-- Header Ends -->
